client/src/css/overview.css
.style-thumbnail {
  object-fit: cover;
  height: 80px;
  width: 80px;
  border-radius: 50%;
}

.style-thumbnail:hover {
  cursor: pointer;
}

.overview-container {
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-template-rows: minmax(80%, auto) auto;
  grid-template-areas:
    "gallery details"
    "description description";
  column-gap: 30px;
  place-items: stretch;
  place-content: stretch;
  min-height: 800px;
  margin-top: 20px;
}

.image-gallery {
  grid-area: gallery;
  overflow: hidden;
  display: flex;
  flex-flow: row nowrap;
  align-items: stretch;
}

.gallery-thumbnails {
  max-width: 100px;
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
}

.gallery-thumbnails-viewport {
  overflow: hidden;
}

.gallery-thumbnails-all {
  transform: translate(0, 0);
  margin: 10px;
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  row-gap: 20px;
  transition: all 400ms ease;
}

.main-image-pane {
  /* background-color: #dddddd; */
  position: relative;
}

.thumbnails-arrow {
  border-radius: 3px;
  padding: 3px;
}

.gallery-thumbnail-container {
  height: 60px;
  width: 60px;
  position: relative;
  border: solid 1px #808080;
}

.gallery-thumbnail-container.current-photo::after {
  background-color: #484848;
  height: 4px;
  width: 100%;
  position: absolute;
  content: '';
  top: 105%;
  left: 0;
}

.gallery-thumbnail:hover {
  cursor: pointer;
}

.gallery-thumbnail {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.main-image-arrow {
  position: absolute;
  top: 50%;
  padding: 7px 5px 5px;
  border-radius: 3px;
  background-color: #dddddd80;
}

.main-image-arrow:hover, .thumbnails-arrow:hover {
  background-color: #B4B4B480;
}

.main-image-arrow.right {
  left: 100%;
  transform: translate(-100%, -50%);
}

.main-image-arrow.left {
  transform: translate(0, -50%);
}

.main-image {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.product-details {
  grid-area: details;
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-between;
  align-items: stretch;
}

.product-description {
  grid-area: description;
}

